--- a/src/view/common.html
+++ b/src/view/common.html
@@ -16,6 +16,7 @@
   <link href="https://cdn.bootcss.com/normalize/7.0.0/normalize.min.css" rel="stylesheet">
   <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.bootcss.com/Swiper/4.0.1/css/swiper.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="../css/common.css">
   <!--[if lt IE 9]>
      <script src="https://cdn.bootcss.com/html5shiv/3.7.3/html5shiv.min.js"></script>
      <script src="https://cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
@@ -24,7 +25,7 @@
 </head>
 <body>
 
-  <script src="https://cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>\
+  <script src="https://cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
   <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script src="https://cdn.bootcss.com/jquery_lazyload/1.9.7/jquery.lazyload.min.js"></script>
   <script src="https://cdn.bootcss.com/Swiper/4.0.1/js/swiper.min.js"></script>
