--- a/src/view/index.html
+++ b/src/view/index.html
@@ -6,9 +6,6 @@
 </head>
 <body>
   index
-  <script src="https://cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
-  <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <script src="https://cdn.bootcss.com/jquery_lazyload/1.9.7/jquery.lazyload.min.js"></script>
-  <script src="https://cdn.bootcss.com/Swiper/4.0.1/js/swiper.min.js"></script>
+  <%= require('html-loader!./layout/footer.html') %>
 </body>
 </html>
