--- a/src/page/common/common.scss
+++ b/src/page/common/common.scss
@@ -2,7 +2,7 @@
 * @Author: kai
 * @Date:   2017-11-14 20:05:55
 * @Last Modified by:   kai
-* @Last Modified time: 2017-11-15 19:24:33
+* @Last Modified time: 2017-11-15 22:47:24
 */
 $green: #3dbd95;
 $grey: #f0f0f0;
@@ -24,11 +24,19 @@ h1, h2, h3, h4, h5, h6 {
 
 // 登录注册头部
 .top {
-  height: 55px;
+  height: 95px;
   background-color: #fff;
-  h2 {
-    line-height: 55px;
-    font-weight: 500;
-    font-size: 2rem;
+  position: relative;
+  .back {
+    display: block;
+    height: 48px;
+    width: 48px;
+    background-image: url('../../image/left-arrow.png');
   }
+  h2 {
+    line-height: 95px;
+    font-weight: 500;
+    font-size: 2.25em;
+  }
+
 }
