--- a/src/view/layout/top.html
+++ b/src/view/layout/top.html
@@ -1,4 +1,4 @@
-<div class="top">
-  <i class="back"></i>
+<div class="top top-wrap">
+  <a class="back"></a>
   <h2 class="text-center">登录</h2>
 </div>
