--- a/src/page/common/common.scss
+++ b/src/page/common/common.scss
@@ -2,7 +2,7 @@
 * @Author: kai
 * @Date:   2017-11-14 20:05:55
 * @Last Modified by:   kai
-* @Last Modified time: 2017-11-16 10:23:31
+* @Last Modified time: 2017-11-16 11:20:52
 */
 $green: #3dbd95;
 $grey: #f0f0f0;
@@ -34,7 +34,7 @@ h1, h2, h3, h4, h5, h6 {
     position: absolute;
     top: 12px;
     left: 20px;
-    background: url('../../image/left-arrow.png') center;
+    background: url('../../image/focus1.png') center;
   }
   h2 {
     line-height: 45px;
