--- a/src/view/forgetPassword.html
+++ b/src/view/forgetPassword.html
@@ -9,9 +9,11 @@
   <div class="log-wrap">
     <form action="">
       <input type="number" class="input-type phone" name="phone" id="phone">
-      <input type="password" class="input-type password" name="password" id="password">
+      <div class="ma-wrap">
+        <input type="password" class="input-type password" name="password" id="password">
+      </div>
       <div class="submit-wrap">
-        <button class="btn btn-block" type="submit" id="login-submit">确定</button>
+        <button class="btn btn-block" type="submit" id="login-submit">登录</button>
       </div>
     </form>
     <a href="#" class="forget-pass">忘记密码？</a>
