--- a/src/view/index.html
+++ b/src/view/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
   <%= require('html-loader!./layout/html-common.html') %>
-  <title>Document</title>
+  <title><%= htmlWebpackPlugin.options.title%></title>
 </head>
 <body>
   index
