--- a/src/view/forgetPassword.html
+++ b/src/view/forgetPassword.html
@@ -5,23 +5,62 @@
   <title><%= htmlWebpackPlugin.options.title%></title>
 </head>
 <body>
-  <%= require('html-loader!./layout/top.html') %>
+  <div class="top top-wrap">
+    <a class="back" href="javascript:void(0);" onclick="window.history.back()"></a>
+    <h2 class="text-center">找回密码</h2>
+  </div>
   <div class="log-wrap">
     <form action="">
-      <input type="number" class="input-type phone" name="phone" id="phone">
+      <input type="number" class="input-type phone" name="phone" id="phone" autoComplete='off' placeholder="请输入手机号">
       <div class="ma-wrap">
-        <input type="password" class="input-type password" name="password" id="password">
+        <input type="number" class="input-type ma" name="ma" id="ma" autoComplete='off' placeholder="请输入验证码">
+        <button class="btn btn-get-ma btn-get-ma-forget-password" type="button" disabled>获取验证码</button>
       </div>
+      <input type="password" class="input-type password" name="password" id="password" autoComplete='off' placeholder="请重设新密码">
       <div class="submit-wrap">
-        <button class="btn btn-block" type="submit" id="login-submit">登录</button>
+        <button class="btn btn-block register-submit" type="submit" id="register-submit" disabled>注册</button>
       </div>
     </form>
-    <a href="#" class="forget-pass">忘记密码？</a>
-    <div class="fast-login text-center">
-      <p class="text">快捷登录</p>
-      <a href="#" class="wechat">微信登录</a>
+    <div class="agree">
+      <label>
+        <input type="checkbox" class="agree-checkbox" checked>
+        <span>
+          已阅读并同意<a href="javascript:void(0);" class="btn-text" data-toggle="modal" data-target=".bs-modal-lg">《用户协议》</a>
+        </span>
+      </label>
     </div>
   </div>
+  <div class="modal fade bs-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
+  <div class="modal-dialog modal-lg" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">用户协议</h4>
+      </div>
+      <div class="modal-body" style="max-height: 60vh;overflow-y: auto;">
+        <p>协议一</p>
+        <p>协议一</p>
+        <p>协议一</p>
+        <p>协议一</p>
+        <p>协议一</p>
+        <p>协议一</p>
+        <p>协议一</p>
+        <p>协议一</p>
+        <p>协议一</p>
+        <p>协议一</p>
+        <p>协议一</p>
+        <p>协议一</p>
+        <p>协议一</p>
+        <p>协议一</p>
+        <p>协议一</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+      </div>
+    </div>
+  </div>
+</div>
+
   <%= require('html-loader!./layout/footer.html') %>
 </body>
 </html>
