--- a/src/view/forgetPassword.html
+++ b/src/view/forgetPassword.html
@@ -18,7 +18,7 @@
       </div>
       <input type="password" class="input-type password" name="password" id="password" autoComplete='off' placeholder="请重设新密码">
       <div class="submit-wrap">
-        <button class="btn btn-block register-submit" type="submit" id="register-submit" disabled>注册</button>
+        <button class="btn btn-block register-submit"" type="submit" id="forget-pass-submit" disabled>确定</button>
       </div>
     </form>
     <div class="agree">
