--- a/src/view/userCenter.html
+++ b/src/view/userCenter.html
@@ -22,20 +22,31 @@
       <a href="#" class="turn"></a>
     </div>
     <div class="links-list clearfix">
-      <a href="#" class="col-xs-4 item money">
-        
+      <a href="#" class="col-xs-4 item money text-center">
+        我的钱包
       </a>
-      <a href="#" class="col-xs-4 item quan">
-        
+      <a href="#" class="col-xs-4 item quan text-center">
+        我的优惠券
       </a>
-      <a href="#" class="col-xs-4 item commit">
-        
+      <a href="#" class="col-xs-4 item commit text-center">
+        我的评价
       </a>
     </div>
     <div class="user-content">
-      
+      <div class="groups">
+        <a href="#" class="item">我的订单</a>
+        <a href="#" class="item">我的预约</a>
+        <a href="#" class="item">常用地址</a>
+        <a href="#" class="item">我的收藏</a>
+      </div>
+      <div class="groups">
+        <a href="#" class="item">设置</a>
+        <a href="#" class="item">常见问题</a>
+        <a href="#" class="item">关于我们</a>
+      </div>
     </div>
   </div>
+  <%= require('html-loader!./layout/userFooter.html') %>
   <%= require('html-loader!./layout/footer.html') %>
 </body>
 </html>
