--- a/src/view/index.html
+++ b/src/view/index.html
@@ -5,7 +5,240 @@
   <title><%= htmlWebpackPlugin.options.title%></title>
 </head>
 <body>
-  
+  <div class="search-wrapper search-type-one">
+    <p class="search-text">搜索商家、服务</p>
+  </div>
+  <div class="center-content">
+    <!-- 轮播图 -->
+    <div class="swiper-container">
+      <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <a href="#">
+              <img width="100%" src="<%= require('../image/banner.png') %>" alt="banner">
+            </a>
+          </div>
+          <div class="swiper-slide">
+            <a href="#">
+              <img width="100%" src="<%= require('../image/banner.png') %>" alt="banner">
+            </a>
+          </div>
+          <div class="swiper-slide">
+            <a href="#">
+              <img width="100%" src="<%= require('../image/banner.png') %>" alt="banner">
+            </a>
+          </div>
+      </div>
+      <div class="swiper-pagination"></div>
+    </div>
+    <!-- 月嫂类型 -->
+    <div class="menu-wrap clearfix">
+      <a href="#" class="text-center item item1">
+        <span class="icon"></span>
+        <span class="text">月嫂</span>
+      </a>
+      <a href="#" class="text-center item item2">
+        <span class="icon"></span>
+        <span class="text">育儿师</span>
+      </a>
+      <a href="#" class="text-center item item3">
+        <span class="icon"></span>
+        <span class="text">保姆</span>
+      </a>
+      <a href="#" class="text-center item item4">
+        <span class="icon"></span>
+        <span class="text">保洁</span>
+      </a>
+      <a href="#" class="text-center item item5">
+        <span class="icon"></span>
+        <span class="text">钟点工</span>
+      </a>
+      <a href="#" class="text-center item item6">
+        <span class="icon"></span>
+        <span class="text">搬家</span>
+      </a>
+      <a href="#" class="text-center item item7">
+        <span class="icon"></span>
+        <span class="text">辅导</span>
+      </a>
+      <a href="#" class="text-center item item8">
+        <span class="icon"></span>
+        <span class="text">维修</span>
+      </a>
+      <a href="#" class="text-center item item9">
+        <span class="icon"></span>
+        <span class="text">生活服务</span>
+      </a>
+      <a href="#" class="text-center item item10">
+        <span class="icon"></span>
+        <span class="text"> 全部</span>
+      </a>
+    </div>
+
+    <!-- 功能 -->
+    <div class="function">
+      <div class="text-content clearfix">
+        <span class="text">即可达</span>
+        <span class="small-text">最快30分钟上门</span>
+      </div>
+      <div class="function-list clearfix text-center">
+        <a href="#" class="item item1">
+          <span class="icon"></span>
+          <span class="name">家庭维修</span>
+        </a>
+        <a href="#" class="item item2">
+          <span class="icon"></span>
+          <span class="name">开锁换锁</span>
+        </a>
+        <a href="#" class="item item3">
+          <span class="icon"></span>
+          <span class="name">管道疏通</span>
+        </a>
+        <a href="#" class="item item4">
+          <span class="icon"></span>
+          <span class="name">汽车抢修</span>
+        </a>
+        <a href="#" class="item item5">
+          <span class="icon"></span>
+          <span class="name">装修小工</span>
+        </a>
+      </div>
+    </div>
+    <!-- 广告 -->
+    <div class="ad">
+      <img src="<%= require('../image/banner2.png') %>" alt="" width="100%">
+    </div>
+    <!-- 推荐阿姨 -->
+    <div class="recommend-aunts">
+      <p class="title text-center"><span class="text">推荐阿姨</span></p>
+      <div class="aunts-list">
+        <a href="#" class="item clearfix">
+          <img src="<%= require('../image/avatar.png') %>" alt="" class="pull-left img">
+          <div class="content pull-left">
+            <div class="info">
+              <span class="name">李阿姨</span>
+              <span class="star star1"></span>
+              <span class="status">空挡</span>
+              <span class="money">4000/月</span>
+            </div>
+            <div class="detail clearfix">
+              <span>47岁</span>
+              <span>舟山人</span>
+              <span>高中</span>
+              <span>1年经验</span>
+            </div>
+            <div class="boxes clearfix">
+              <span class="small-box">1年经验</span>
+              <span class="small-box">舟山人</span>
+              <span class="small-box">高中</span>
+            </div>
+          </div>
+        </a>
+        <a href="#" class="item clearfix">
+          <img src="<%= require('../image/avatar.png') %>" alt="" class="pull-left img">
+          <div class="content pull-left">
+            <div class="info">
+              <span class="name">李阿姨</span>
+              <span class="star star2"></span>
+              <span class="status active">上岗中</span>
+              <span class="money">4000/月</span>
+            </div>
+            <div class="detail clearfix">
+              <span>47岁</span>
+              <span>舟山人</span>
+              <span>高中</span>
+              <span>1年经验</span>
+            </div>
+            <div class="boxes clearfix">
+              <span class="small-box">1年经验</span>
+              <span class="small-box">舟山人</span>
+              <span class="small-box">高中</span>
+            </div>
+          </div>
+        </a>
+        <a href="#" class="item clearfix">
+          <img src="<%= require('../image/avatar.png') %>" alt="" class="pull-left img">
+          <div class="content pull-left">
+            <div class="info">
+              <span class="name">李阿姨</span>
+              <span class="star star3"></span>
+              <span class="status active">上岗中</span>
+              <span class="money">4000/月</span>
+            </div>
+            <div class="detail clearfix">
+              <span>47岁</span>
+              <span>舟山人</span>
+              <span>高中</span>
+              <span>1年经验</span>
+            </div>
+            <div class="boxes clearfix">
+              <span class="small-box">1年经验</span>
+              <span class="small-box">舟山人</span>
+              <span class="small-box">高中</span>
+            </div>
+          </div>
+        </a>
+        <a href="#" class="item clearfix">
+          <img src="<%= require('../image/avatar.png') %>" alt="" class="pull-left img">
+          <div class="content pull-left">
+            <div class="info">
+              <span class="name">李阿姨</span>
+              <span class="star star4"></span>
+              <span class="status active">上岗中</span>
+              <span class="money">4000/月</span>
+            </div>
+            <div class="detail clearfix">
+              <span>47岁</span>
+              <span>舟山人</span>
+              <span>高中</span>
+              <span>1年经验</span>
+            </div>
+            <div class="boxes clearfix">
+              <span class="small-box">1年经验</span>
+              <span class="small-box">舟山人</span>
+              <span class="small-box">高中</span>
+            </div>
+          </div>
+        </a>
+        <a href="#" class="item clearfix">
+          <img src="<%= require('../image/avatar.png') %>" alt="" class="pull-left img">
+          <div class="content pull-left">
+            <div class="info">
+              <span class="name">李阿姨</span>
+              <span class="star star5"></span>
+              <span class="status active">上岗中</span>
+              <span class="money">4000/月</span>
+            </div>
+            <div class="detail clearfix">
+              <span>47岁</span>
+              <span>舟山人</span>
+              <span>高中</span>
+              <span>1年经验</span>
+            </div>
+            <div class="boxes clearfix">
+              <span class="small-box">1年经验</span>
+              <span class="small-box">舟山人</span>
+              <span class="small-box">高中</span>
+            </div>
+          </div>
+        </a>
+      </div>
+      <div class="underline">
+        <span class="line"></span>
+        <span class="text text-center">我也是有底线</span>
+      </div>
+    </div>
+  </div>
+  <%= require('html-loader!./layout/userFooter.html') %>
   <%= require('html-loader!./layout/footer.html') %>
+  <script>
+    var mySwiper = new Swiper('.swiper-container', {
+      autoplay: 5000,//可选选项，自动滑动
+      pagination: {
+        el: '.swiper-pagination',
+      },
+      loop: true,
+      bulletActiveClass: 'my-bullet-active',
+    })
+  </script>
 </body>
 </html>
