--- a/src/view/index.html
+++ b/src/view/index.html
@@ -228,6 +228,7 @@
       </div>
     </div>
   </div>
+  <%= require('html-loader!./layout/search.html') %>
   <%= require('html-loader!./layout/userFooter.html') %>
   <%= require('html-loader!./layout/footer.html') %>
   <script>
