--- a/src/page/common/common.scss
+++ b/src/page/common/common.scss
@@ -2,7 +2,7 @@
 * @Author: kai
 * @Date:   2017-11-14 20:05:55
 * @Last Modified by:   kai
-* @Last Modified time: 2017-11-18 21:17:46
+* @Last Modified time: 2017-11-18 22:30:52
 */
 $green: #3dbd95;
 $grey: #f0f0f0;
@@ -43,6 +43,7 @@ a:hover, a:focus, a:active {
   left: 0;
   right: 0;
   overflow-y: auto;
+  z-index: 1;
 }
 
 
@@ -50,6 +51,8 @@ a:hover, a:focus, a:active {
 .search-wrapper {
   background-color: #fff;
   height: 70px;
+  padding: 15px 20px;
+  position: relative;
   &.search-type-one {
     position: absolute;
     top: 0;
@@ -57,10 +60,70 @@ a:hover, a:focus, a:active {
     right: 0;
     z-index: 10;
   }
-  padding: 15px 20px;
-  
-  position: relative;
+  &.search-type-two {
+    display: none;
+    padding-top: 0;
+    padding-bottom: 0;
+    background-color: $grey;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 20;
+    height: 100vh;
+    padding-left: 0;
+    padding-right: 0;
+    .search {
+      margin-left: 20px;
+      width: calc(100% - 100px);
+    }
+    .cancle {
+      font-size: 1.2em;
+      color: #333;
+      margin-left: 15px;
+      &:focus {
+        color: $green;
+      }
+    }
+    .content {
+      .info {
+        margin: 10px 15px;
+        .title {
+          font-size: 1.2em;
+          margin: 15px 15px 15px 5px;
+        }
+        .boxes {
+          .item {
+            margin-bottom: 10px;
+            padding: 0 5px;
+            &:focus .box{
+              color: $green;
+              border-color: $green
+            }
+          }
+          .box {
+            display: block;
+            color: #333;
+            background-color: #fff;
+            padding: 5px 0;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+          }
+        }
+      }
+    }
+  }
+  .search-container {
+    padding-top: 15px;
+    padding-bottom: 15px;
+    border-bottom: 1px solid #ccc;
+    background-color: #fff;
+  }
   .search-text {
+    color: #aaa;
+  }
+  .search-text, .search {
     width: 100%;
     border: none;
     height: 40px;
@@ -666,6 +729,7 @@ a:hover, a:focus, a:active {
     }
   }
 }
+
 @media (max-width: 320px) {
   .function {
     .function-list {
