--- a/src/view/layout/search.html
+++ b/src/view/layout/search.html
@@ -1,8 +1,8 @@
 <div class="search-wrapper search-type-two">
   <div class="search-container">
+    <a href="javascript:void(0);" class="back back-index"></a>
     <input type="text" class="search input-search" placeholder="搜索商家、服务" >
-    <a href="javascript:void(0);" class="cancle" id="cancle">取消</a>
-    <a href="javascript:void(0);" class="btn-search"></a>
+    <a href="javascript:void(0);" class="cancle cancle-index" id="cancle">取消</a>
   </div>
   <div class="content">
     <div class="info">
