--- a/src/page/common/common.scss
+++ b/src/page/common/common.scss
@@ -2,7 +2,7 @@
 * @Author: kai
 * @Date:   2017-11-14 20:05:55
 * @Last Modified by:   kai
-* @Last Modified time: 2017-11-17 16:32:24
+* @Last Modified time: 2017-11-17 17:05:32
 */
 $green: #3dbd95;
 $grey: #f0f0f0;
@@ -48,7 +48,7 @@ input {
     position: absolute;
     top: 15px;
     left: 10px;
-    background: url('../../image/icon6.png') 0 -302px;
+    background: url('../../image/icon6.png') 0 -302px no-repeat;
   }
   h2 {
     line-height: 55px;
@@ -221,7 +221,7 @@ input {
         }
         .phone {
           padding-left: 20px;
-          background: transparent url('../../image/phone-white.png') 0 0 no-repeat;
+          background: transparent url('../../image/icon6.png') -5px -146px no-repeat;
         }
       }
     }
@@ -232,7 +232,7 @@ input {
       height: 50px;
       width: 50px;
       margin-top: -25px;
-      background: url('../../image/arrow-right-white.png') center no-repeat;
+      background: url('../../image/icon6.png') 10px -405px no-repeat;
     }
   }
   .links-list {
