--- a/src/view/layout/sort.html
+++ b/src/view/layout/sort.html
@@ -15,9 +15,65 @@
   </div>
   <div class="type-list clearfix">
     <span class="type-small-box small-box pull-left">8001-10000元<i class="icon"></i></span>
-    <span class="type-small-box small-box pull-left">40-49<i class="icon"></i></span>
-    <span class="type-small-box small-box pull-left">10年以上<i class="icon"></i></span>
-    <span class="type-small-box small-box pull-left">不限<i class="icon"></i></span>
-    <span class="type-small-box small-box pull-left">不限<i class="icon"></i></span>
+  </div>
+  <div class="shadow-wrap">
+    <div class="type-wrap sort-type">
+      <a href="javasript:void(0);" class="item">
+        不限
+      </a>
+      <a href="javasript:void(0);" class="item">
+        3000以下
+      </a>
+      <a href="javasript:void(0);" class="item">
+        3001-5000
+      </a>
+    </div>
+    <div class="type-wrap types-type">
+      <a href="javasript:void(0);" class="item">
+        不限
+      </a>
+      <a href="javasript:void(0);" class="item">
+        月嫂
+      </a>
+      <a href="javasript:void(0);" class="item">
+        保姆
+      </a>
+    </div>
+    <div class="type-wrap price-type">
+      <a href="javasript:void(0);" class="item">
+        智能排序
+      </a>
+      <a href="javasript:void(0);" class="item">
+        最新发布
+      </a>
+      <a href="javasript:void(0);" class="item">
+        价格最低
+      </a>
+    </div>
+    <div class="type-wrap choose-type">
+      <div class="info">
+        <p class="title">热门搜索</p>
+        <div class="boxes clearfix">
+          <a href="#" class="col-xs-4 item">
+            <span class="text-center box text-overflow">保姆</span>
+          </a>
+          <a href="#" class="col-xs-4 item">
+            <span class="text-center box text-overflow">月嫂</span>
+          </a>
+          <a href="#" class="col-xs-4 item">
+            <span class="text-center box text-overflow">烧饭阿姨</span>
+          </a>
+          <a href="#" class="col-xs-4 item">
+            <span class="text-center box text-overflow">保姆</span>
+          </a>
+          <a href="#" class="col-xs-4 item">
+            <span class="text-center box text-overflow">月嫂</span>
+          </a>
+          <a href="#" class="col-xs-4 item">
+            <span class="text-center box text-overflow">烧饭阿姨</span>
+          </a>
+        </div>
+    </div>
+    </div>
   </div>
 </div>
